# NeuRiPP

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  requirements_conda.txt
devtools/conda-envs/: docs_env.yaml
docs/: README.md
docs/source/: .gitignore  conf.py  index.rst  modules.rst  neuripp.ODE_solvers.rst  neuripp.architectures.rst  neuripp.core.rst  neuripp.flows.rst  neuripp.functionals.rst  neuripp.geometry.rst  neuripp.rst
docs/source/_include/: examples.rst  notebooks
examples/: test_mmnn.ipynb
examples/notebooks/: test_mmnn.ipynb
src/neuripp/ODE_solvers/: log_ODEs.py  solvers.py
src/neuripp/architectures/: MMNN.py  architectures.py  node.py  utils_node.py
src/neuripp/core/: types.py
src/neuripp/flows/: gradient_flow.py  visualization.py
src/neuripp/functionals/: functional.py  functions.py  interaction_functional_class.py  internal_functional_class.py  linear_funcitonal_class.py
src/neuripp/geometry/: G_matrix.py  lin_alg_solvers.py
src/neuripp/parametric_model/: parametric_model.py
