[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "NeuRiPP"
authors = [
  {name = "Vitalii Aksenov", email = "viviaxenov@gmail.com"},
  {name = "Sebastian Gutierrez", email = "shern3@gmail.com"},
]
readme = 'README.md'
version = "0.0.1"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
